IKKRNBSP-2122 arm: msm: build: Add option to build motorola dtbs
Introduce a new configuration MMI_DEVICE_DTBS that will allow the
target to only build Motorola devices. If this option is configured
we will omit the QC architecture defaults for msm8916. This also will
enable adding 1kb of padding to the DTB to allow for insertion of
variables into the /chosen node at runtime in the bootloader.

Change-Id: I038a6d77bd4b827c9881f59c9c61ac8c5c62d766
[jasonh: Adjusted for msm8916]
Signed-off-by: Jason Hrycay <jason.hrycay@motorola.com>
Signed-off-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -707,4 +707,12 @@ config MSM_VSENS
 
 source "drivers/soc/qcom/memshare/Kconfig"
 
+config MMI_DEVICE_DTBS
+ 	depends on ARCH_MSM
+ 	default n
+ 	bool "Motorola Mobility Device DTBs"
+ 	help
+ 	  Only include Motorola device specific DTBs to limit the number that
+	  get built during kernel compilation.
+
 endif # ARCH_MSM
