IKSWM-4458 soc:qcom: Add bootinfo support
The interface would
1. export /proc/bootinfo to user space, bugreport can use it
2. annotate boot info to last_kmsg

Information provided so far:
1. powerupreason and last boot reason
2. serialno and hardware revision
3. MBM version and build information
4. boot sequence

Change-Id: I3a3d3a67e9d4f799d990e742ac7fcc66ae71bc57

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -715,4 +715,12 @@ config MMI_DEVICE_DTBS
  	  Only include Motorola device specific DTBs to limit the number that
 	  get built during kernel compilation.
 
+config BOOTINFO
+	bool "Boot Information Feature"
+	default n
+	help
+	  This feature provides access to certain boot information
+	  from both kernel context (via function call) and user
+	  context (via /proc/bootinfo).
+
 endif # ARCH_MSM
